[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Redis Locker"
description = "Redis Locker"
readme = "README.md"
license = { file = "LICENSE" }
version = "2.0.1"
authors = [
    { name = "Alex Shitik", email = "salexs95@yandex.ru" },
]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    'aioredis==2.0.0'
]

[tool.setuptools.packages.find]
where = ["src"]