[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aioredis-wrapper"
description = "Redis Locker"
readme = "README.md"
license = { file = "LICENSE" }
version = "2.1.0"
authors = [
    { name = "Alex Shitik", email = "salexs95@yandex.ru" },
]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    'redis'
]

[tool.setuptools.packages.find]
where = ["src"]